close #1 Normalising, Preprocessing and Basic training #3

--- a/Initial Notebook.ipynb
+++ b/Initial Notebook.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "mediterranean-bundle",
+   "id": "bibliographic-scoop",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "appointed-creature",
+   "id": "religious-chance",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "difficult-nancy",
+   "id": "great-league",
    "metadata": {},
    "outputs": [
     {
@@ -46,7 +46,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "refined-mexico",
+   "id": "another-myrtle",
    "metadata": {},
    "outputs": [
     {
@@ -277,7 +277,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "dynamic-region",
+   "id": "crucial-mandate",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -287,7 +287,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "removable-idaho",
+   "id": "several-timothy",
    "metadata": {},
    "outputs": [
     {
@@ -316,7 +316,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "continent-least",
+   "id": "limited-wheat",
    "metadata": {},
    "outputs": [
     {
@@ -1455,7 +1455,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "former-conviction",
+   "id": "reported-christmas",
    "metadata": {},
    "outputs": [
     {
@@ -1488,7 +1488,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "cleared-murder",
+   "id": "commercial-portal",
    "metadata": {},
    "outputs": [
     {
@@ -1544,7 +1544,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "moderate-master",
+   "id": "israeli-conversion",
    "metadata": {},
    "source": [
     "## Trying out functions to make script that will create a labelled fundamental stock datatset"
@@ -1553,7 +1553,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "encouraging-sperm",
+   "id": "abandoned-valentine",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1563,7 +1563,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "micro-catholic",
+   "id": "attractive-portal",
    "metadata": {},
    "outputs": [
     {
@@ -1586,7 +1586,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "sapphire-legislation",
+   "id": "sorted-setup",
    "metadata": {},
    "outputs": [
     {
@@ -1725,7 +1725,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "northern-gossip",
+   "id": "educated-effects",
    "metadata": {},
    "source": [
     "## Lets see what the pandas are about!"
@@ -1734,7 +1734,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "ambient-leonard",
+   "id": "antique-necessity",
    "metadata": {},
    "outputs": [
     {
@@ -1973,7 +1973,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "clear-integrity",
+   "id": "married-storm",
    "metadata": {},
    "outputs": [
     {
@@ -1993,7 +1993,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "talented-heating",
+   "id": "traditional-pennsylvania",
    "metadata": {},
    "source": [
     "## example how script will be used to find share prices of ticker in fundamental data from us daily share prices data"
@@ -2002,7 +2002,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "immediate-distinction",
+   "id": "treated-piece",
    "metadata": {},
    "outputs": [
     {
@@ -2023,7 +2023,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "durable-emergency",
+   "id": "legitimate-interference",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2033,7 +2033,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "taken-ozone",
+   "id": "adverse-training",
    "metadata": {},
    "outputs": [
     {
@@ -2054,7 +2054,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "assured-boxing",
+   "id": "durable-homework",
    "metadata": {},
    "outputs": [
     {
@@ -2074,7 +2074,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "accepting-kingston",
+   "id": "seven-liver",
    "metadata": {},
    "source": [
     "## wait lets learn how to add months to date in pandas"
@@ -2083,7 +2083,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "lonely-worcester",
+   "id": "formal-joyce",
    "metadata": {},
    "outputs": [
     {
@@ -2105,7 +2105,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "apart-willow",
+   "id": "looking-equity",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2115,7 +2115,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "played-brain",
+   "id": "higher-fundamental",
    "metadata": {},
    "outputs": [
     {
@@ -2147,7 +2147,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "extended-integration",
+   "id": "premier-stadium",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2157,7 +2157,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "moral-parks",
+   "id": "considered-bible",
    "metadata": {},
    "outputs": [
     {
@@ -2177,7 +2177,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "plastic-syndrome",
+   "id": "arctic-diesel",
    "metadata": {},
    "source": [
     "## Start writing script "
@@ -2185,7 +2185,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "convenient-prospect",
+   "id": "lined-watershed",
    "metadata": {},
    "source": [
     "> Convert required date columns in datasets from str to date type"
@@ -2194,7 +2194,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "prescribed-commerce",
+   "id": "seeing-rough",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2204,7 +2204,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "protective-catalog",
+   "id": "responsible-execution",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2214,7 +2214,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "further-slovak",
+   "id": "refined-invitation",
    "metadata": {},
    "outputs": [
     {
@@ -2235,7 +2235,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "honey-kuwait",
+   "id": "palestinian-rogers",
    "metadata": {},
    "source": [
     "> Lets check if our initial queries work on these types"
@@ -2244,7 +2244,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "loving-emergency",
+   "id": "heavy-prefix",
    "metadata": {},
    "outputs": [
     {
@@ -2265,7 +2265,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "elementary-wayne",
+   "id": "personalized-offset",
    "metadata": {},
    "outputs": [
     {
@@ -2286,24 +2286,24 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "interesting-enemy",
+   "id": "crucial-patrick",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "200\n"
+      "63547\n"
      ]
     }
    ],
    "source": [
     "price_df=pd.DataFrame()\n",
-    "price_df['Ticker']=fundamen_data['Ticker'][0:200]\n",
+    "price_df['Ticker']=fundamen_data['Ticker']\n",
     "# dummy assign to create columns\n",
-    "price_df['Price_Present']=fundamen_data['Ticker'][0:200]\n",
-    "price_df['Price_Future']=fundamen_data['Ticker'][0:200]\n",
-    "price_df['Label']=fundamen_data['Ticker'][0:200]\n",
+    "price_df['Price_Present']=fundamen_data['Ticker']\n",
+    "price_df['Price_Future']=fundamen_data['Ticker']\n",
+    "price_df['Label']=fundamen_data['Ticker']\n",
     "print(len(price_df))\n",
     "\n"
    ]
@@ -2311,7 +2311,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "numeric-restaurant",
+   "id": "heavy-light",
    "metadata": {},
    "outputs": [
     {
@@ -2329,7 +2329,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "diagnostic-replica",
+   "id": "graduate-solid",
    "metadata": {},
    "source": [
     "# Labels Info\n",
@@ -2340,22 +2340,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 43,
-   "id": "entertaining-princeton",
+   "cell_type": "markdown",
+   "id": "norwegian-columbus",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 200/200 [02:14<00:00,  1.49it/s]\n"
-     ]
-    }
-   ],
    "source": [
+    "12 hour labelling script\n",
+    "```python\n",
+    "price_df.to_csv(\"labels.csv\")\n",
     "from tqdm import tqdm\n",
-    "for i in tqdm(range(200)):\n",
+    "for i in tqdm(range(len(price_df))):\n",
+    "    if(i%1000==0):\n",
+    "        price_df.to_csv(\"labels.csv\")\n",
     "    try:\n",
     "        price_df['Price_Present'][i]=daily_price.loc[(daily_price.Ticker==fundamen_data.loc[i]['Ticker'] )& (daily_price['Date DT'] >= fundamen_data.loc[i]['Publish Date DT'])]['Close'].iloc[0]\n",
     "        price_df['Price_Future'][i]=daily_price.loc[(daily_price.Ticker==fundamen_data.loc[i]['Ticker'] )& (daily_price['Date DT'] >= (fundamen_data.loc[i]['Publish Date DT']+pd.DateOffset(months=3)))]['Close'].iloc[0]\n",
@@ -2369,13 +2364,14 @@
     "            price_df['Label'][i]=2\n",
     "    except:\n",
     "        price_df['Price_Present'][i]=np.NaN\n",
-    "        price_df['Price_Future'][i]=np.NaN"
+    "        price_df['Price_Future'][i]=np.NaN\n",
+    "```"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "phantom-investor",
+   "id": "interim-spare",
    "metadata": {},
    "outputs": [
     {
@@ -2586,7 +2582,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "recent-plate",
+   "id": "right-dependence",
    "metadata": {},
    "outputs": [
     {
@@ -2619,7 +2615,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "detected-cholesterol",
+   "id": "spectacular-algebra",
    "metadata": {},
    "outputs": [
     {
@@ -2990,7 +2986,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "worst-sponsorship",
+   "id": "strange-portsmouth",
    "metadata": {},
    "outputs": [
     {
@@ -3240,7 +3236,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "alive-conspiracy",
+   "id": "relevant-electron",
    "metadata": {},
    "source": [
     "#  lets try a faster implementaion : try result : is not so fast lmao"
@@ -3249,7 +3245,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "jewish-basin",
+   "id": "hawaiian-preparation",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3259,7 +3255,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "earlier-inside",
+   "id": "surprised-exhaust",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3269,7 +3265,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "backed-spirit",
+   "id": "speaking-ukraine",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3285,8 +3281,118 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 33,
+   "id": "finished-arizona",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Ticker           63547\n",
+       "Price_Present    59321\n",
+       "Price_Future     59315\n",
+       "Label            63547\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "price_df.count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "likely-throat",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Ticker                                             63547\n",
+       "SimFinId                                           63547\n",
+       "Currency                                           63547\n",
+       "Fiscal Year                                        63547\n",
+       "Fiscal Period                                      63547\n",
+       "Report Date                                        63547\n",
+       "Publish Date                                       63547\n",
+       "Restated Date                                      63547\n",
+       "Shares (Basic)                                     62914\n",
+       "Shares (Diluted)                                   62914\n",
+       "Cash, Cash Equivalents & Short Term Investments    63341\n",
+       "Accounts & Notes Receivable                        58125\n",
+       "Inventories                                        43724\n",
+       "Total Current Assets                               63527\n",
+       "Property, Plant & Equipment, Net                   62329\n",
+       "Long Term Investments & Receivables                17998\n",
+       "Other Long Term Assets                             62783\n",
+       "Total Noncurrent Assets                            63275\n",
+       "Total Assets                                       63547\n",
+       "Payables & Accruals                                63261\n",
+       "Short Term Debt                                    41829\n",
+       "Total Current Liabilities                          63543\n",
+       "Long Term Debt                                     50008\n",
+       "Total Noncurrent Liabilities                       62793\n",
+       "Total Liabilities                                  63547\n",
+       "Share Capital & Additional Paid-In Capital         62499\n",
+       "Treasury Stock                                     29925\n",
+       "Retained Earnings                                  60658\n",
+       "Total Equity                                       63546\n",
+       "Total Liabilities & Equity                         63547\n",
+       "Publish Date DT                                    63547\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fundamen_data.count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "korean-valuable",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "price_df=pd.read_csv(\"./labels.csv\")\n",
+    "a=price_df.loc[((price_df.Price_Present==price_df.Price_Future) | (price_df.Label==price_df.Ticker))]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "economic-payday",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6444"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "uniform-communication",
+   "id": "acting-aircraft",
    "metadata": {},
    "outputs": [],
    "source": []
