--- a/BinaryClassification.ipynb
+++ b/BinaryClassification.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "whole-removal",
+   "execution_count": 2,
+   "id": "knowing-excerpt",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,8 +14,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "muslim-sleep",
+   "execution_count": 3,
+   "id": "underlying-denver",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,8 +26,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "iraqi-presence",
+   "execution_count": 4,
+   "id": "seven-conditioning",
    "metadata": {},
    "outputs": [
     {
@@ -478,7 +478,7 @@
        "[58828 rows x 23 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -503,8 +503,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "animal-vertical",
+   "execution_count": 5,
+   "id": "annoying-magic",
    "metadata": {},
    "outputs": [
     {
@@ -571,7 +571,7 @@
        "4      2         36.66"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -582,8 +582,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "boring-british",
+   "execution_count": 6,
+   "id": "familiar-oregon",
    "metadata": {},
    "outputs": [
     {
@@ -725,7 +725,7 @@
        "[58828 rows x 5 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -749,7 +749,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "particular-fantasy",
+   "id": "biblical-terrorism",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -758,8 +758,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "naughty-wagon",
+   "execution_count": 8,
+   "id": "imperial-implementation",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -771,31 +771,108 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "creative-complement",
+   "execution_count": null,
+   "id": "healthy-mystery",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "#clf = []\n",
+    "#score = []\n",
+    "#for x in [0,1,2]:\n",
+    "#    clf.append(LogisticRegression(max_iter=1000))\n",
+    "#    clf[x].fit(X_train,y_train[x])\n",
+    "#    score.append(clf0.score(X_train,y_train[x]))\n",
+    "#\n",
+    "#score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "forced-architect",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class MultiBinaryModel:\n",
+    "    def __init__(self,no_of_clf=3,max_iter=1000):\n",
+    "        assert LogisticRegression\n",
+    "        self.no_of_clf = 3\n",
+    "        self.model = [ LogisticRegression(max_iter=max_iter) for _ in range(self.no_of_clf) ]\n",
+    "    \n",
+    "    def fit(self,X,y):\n",
+    "        assert len(y) == self.no_of_clf\n",
+    "        \n",
+    "        for i in range(self.no_of_clf):\n",
+    "            self.model[i].fit(X,y[i])\n",
+    "    \n",
+    "    def predict(self,X):\n",
+    "        return np.array([self.model[i].predict(X) for i in range(self.no_of_clf)])\n",
+    "    \n",
+    "    def predict_proba(self,X):\n",
+    "        return np.array([self.model[i].predict_proba(X)[:,0] for i in range(self.no_of_clf)])\n",
+    "    \n",
+    "    def score(self,X,y):\n",
+    "        assert len(y) == self.no_of_clf\n",
+    "        return [self.model[i].score(X,y[i]) for i in range(self.no_of_clf)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "id": "naughty-consequence",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[0.5395899911606717, 0.6473108043788672, 0.8064527095940709]"
+       "[0.5395899911606717, 0.6508295369551914, 0.8098014550894133]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "\n",
-    "clf = []\n",
-    "score = []\n",
-    "for x in [0,1,2]:\n",
-    "    clf.append(LogisticRegression(max_iter=1000))\n",
-    "    clf[x].fit(X_train,y_train[x])\n",
-    "    score.append(clf0.score(X_train,y_train[x]))\n",
-    "\n",
-    "score"
+    "model = MultiBinaryModel()\n",
+    "model.fit(X_train,y_train)\n",
+    "model.score(X_train,y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "id": "atomic-organ",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+       "        0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+       "        0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+       "        0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+       "        0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+       "       [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+       "        0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+       "        0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+       "        0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+       "        0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0],\n",
+       "       [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+       "        0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+       "        0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+       "        0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,\n",
+       "        0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]])"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.predict(X_train[400:500])"
    ]
   }
  ],
