--- a/BinaryClassification.ipynb
+++ b/BinaryClassification.ipynb
@@ -3,19 +3,30 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "knowing-excerpt",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd \n",
     "import numpy as np\n",
-    "import seaborn as sns"
+    "import seaborn as snsseas zoom9 is inviting you to a scheduled Zoom meeting.\n",
+    "\n",
+    "Topic: Hans-on Developer Console | Ingenium'21\n",
+    "Time: Mar 13, 2021 04:00 PM Mumbai, Kolkata, New Delhi\n",
+    "\n",
+    "Join Zoom Meeting\n",
+    "https://zoom.us/j/94814380137?pwd=b3VkdkRYbFl1RWcxWjFBK1c2VEVSdz09\n",
+    "seas zoom9 is inviting you to a scheduled Zoom meeting.\n",
+    "\n",
+    "Topic: Hans-on Developer Console | Ingenium'21\n",
+    "Time: Mar 13, 2021 04:00 PM Mumbai, Kolkata, New Delhi\n",
+    "\n",
+    "Join Zoom Meeting\n",
+    "https://zoom.us/j/94814380137?pwd=b3VkdkRYbFl1RWcxWjFBK1c2VEVSdz09\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "underlying-denver",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +38,6 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "seven-conditioning",
    "metadata": {},
    "outputs": [
     {
@@ -504,7 +514,6 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "annoying-magic",
    "metadata": {},
    "outputs": [
     {
@@ -583,7 +592,6 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "familiar-oregon",
    "metadata": {},
    "outputs": [
     {
@@ -749,7 +757,6 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "biblical-terrorism",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -759,7 +766,6 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "imperial-implementation",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -772,7 +778,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "healthy-mystery",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -790,7 +795,6 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "forced-architect",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -820,7 +824,6 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "naughty-consequence",
    "metadata": {},
    "outputs": [
     {
@@ -843,7 +846,6 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "atomic-organ",
    "metadata": {},
    "outputs": [
     {
@@ -892,7 +894,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
