tried opening tree

--- a/DataScattering.ipynb
+++ b/DataScattering.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "twelve-teddy",
+   "execution_count": 1,
+   "id": "generous-doctor",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,8 +17,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "effective-cooper",
+   "execution_count": 2,
+   "id": "senior-situation",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,8 +28,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "graduate-hopkins",
+   "execution_count": 3,
+   "id": "ranking-religion",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,8 +38,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "geological-laser",
+   "execution_count": 4,
+   "id": "cloudy-dream",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,8 +58,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "affiliated-found",
+   "execution_count": 5,
+   "id": "silent-aggregate",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,8 +68,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
-   "id": "early-puppy",
+   "execution_count": 6,
+   "id": "apparent-congo",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,8 +78,53 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "id": "indirect-bench",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "clean_fundamen=pd.read_csv(\"dataset_1.csv\")\n",
+    "LabnF=pd.read_csv(\"./labnf.csv\")\n",
+    "X,Y=clean_fundamen[numeric_columns],LabnF[\"Label\"]\n",
+    "scaler = StandardScaler()\n",
+    "scaler.fit(X)\n",
+    "X=scaler.transform(X)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "athletic-accounting",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.56100532 0.08418943]\n"
+     ]
+    }
+   ],
+   "source": [
+    "pca=PCA(n_components=2).fit(X)\n",
+    "new=pca.transform(X)\n",
+    "print(pca.explained_variance_ratio_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "limiting-sense",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# clf.explained_variance_ratio_"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 66,
-   "id": "precious-mounting",
+   "id": "careful-sheep",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +134,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "personalized-significance",
+   "id": "extraordinary-homework",
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +155,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "dramatic-support",
+   "id": "provincial-retro",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,7 +172,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "graphic-judge",
+   "id": "sustained-billy",
    "metadata": {},
    "outputs": [
     {
@@ -269,7 +314,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "adverse-timing",
+   "id": "israeli-argument",
    "metadata": {},
    "outputs": [
     {
@@ -307,7 +352,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "reliable-uganda",
+   "id": "nonprofit-zimbabwe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -317,7 +362,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "numerical-munich",
+   "id": "computational-blogger",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -327,7 +372,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "stunning-education",
+   "id": "funky-preliminary",
    "metadata": {},
    "outputs": [
     {
@@ -494,7 +539,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "threaded-watershed",
+   "id": "fancy-ocean",
    "metadata": {},
    "outputs": [
     {
@@ -532,7 +577,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "gorgeous-revision",
+   "id": "advised-slide",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -542,7 +587,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "structured-ireland",
+   "id": "coated-appreciation",
    "metadata": {},
    "outputs": [
     {
@@ -562,7 +607,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "popular-particular",
+   "id": "historical-tribune",
    "metadata": {},
    "source": [
     "# clusstering is not a solution here"
