--- a/BinaryClassification.ipynb
+++ b/BinaryClassification.ipynb
@@ -3,30 +3,19 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "practical-storm",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd \n",
     "import numpy as np\n",
-    "import seaborn as snsseas zoom9 is inviting you to a scheduled Zoom meeting.\n",
-    "\n",
-    "Topic: Hans-on Developer Console | Ingenium'21\n",
-    "Time: Mar 13, 2021 04:00 PM Mumbai, Kolkata, New Delhi\n",
-    "\n",
-    "Join Zoom Meeting\n",
-    "https://zoom.us/j/94814380137?pwd=b3VkdkRYbFl1RWcxWjFBK1c2VEVSdz09\n",
-    "seas zoom9 is inviting you to a scheduled Zoom meeting.\n",
-    "\n",
-    "Topic: Hans-on Developer Console | Ingenium'21\n",
-    "Time: Mar 13, 2021 04:00 PM Mumbai, Kolkata, New Delhi\n",
-    "\n",
-    "Join Zoom Meeting\n",
-    "https://zoom.us/j/94814380137?pwd=b3VkdkRYbFl1RWcxWjFBK1c2VEVSdz09\n"
+    "import seaborn as snsseas zoom9 is inviting you to a scheduled Zoom meeting."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "latin-insulin",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,6 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
+   "id": "protected-angola",
    "metadata": {},
    "outputs": [
     {
@@ -514,6 +504,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
+   "id": "attractive-fellow",
    "metadata": {},
    "outputs": [
     {
@@ -592,6 +583,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
+   "id": "earned-present",
    "metadata": {},
    "outputs": [
     {
@@ -757,6 +749,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
+   "id": "fixed-spine",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -766,6 +759,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
+   "id": "neutral-invite",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -778,6 +772,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "independent-wright",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -795,6 +790,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
+   "id": "automotive-patch",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -824,6 +820,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
+   "id": "working-coaching",
    "metadata": {},
    "outputs": [
     {
@@ -846,6 +843,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
+   "id": "right-deficit",
    "metadata": {},
    "outputs": [
     {
@@ -894,7 +892,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
