custom dec tree & random forest

--- a/KNNClassifier.ipynb
+++ b/KNNClassifier.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "proud-quest",
+   "id": "curious-cinema",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "communist-metallic",
+   "id": "foster-bulletin",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,12 +37,12 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "thick-graduate",
+   "id": "educational-broadcast",
    "metadata": {},
    "outputs": [],
    "source": [
     "clean_fundamen=pd.read_csv(\"dataset_1.csv\")\n",
-    "LabnF=pd.read_csv(\"./labnf.csv\")\n",
+    "LabnF=pd.read_csv(\"./labnf_6p.csv\")\n",
     "X,Y=clean_fundamen[numeric_columns],LabnF[\"Label\"]\n",
     "scaler = StandardScaler()\n",
     "scaler.fit(X)\n",
@@ -52,7 +52,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "cultural-treatment",
+   "id": "incredible-alert",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "fabulous-proceeding",
+   "id": "charming-affair",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,14 +75,14 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "fifty-atlanta",
+   "id": "designing-copper",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Test MSE     0.959374468808431\n"
+      "Test MSE     1.317440081591025\n"
      ]
     }
    ],
@@ -101,13 +101,13 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "labeled-weapon",
+   "id": "resistant-algebra",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(0.46974332823389425, 0.5751136798266117)"
+       "(0.42350841407445183, 0.544154519569929)"
       ]
      },
      "execution_count": 7,
@@ -122,7 +122,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "trained-sword",
+   "id": "israeli-optimization",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +148,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "accompanied-monkey",
+   "id": "wanted-winning",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,15 +158,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "matched-cocktail",
+   "execution_count": null,
+   "id": "heavy-aluminum",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 19/19 [03:17<00:00, 10.41s/it]\n"
+      " 84%|████████▍ | 16/19 [02:16<00:34, 11.64s/it]"
      ]
     }
    ],
@@ -177,7 +177,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "imposed-jones",
+   "id": "interior-clark",
    "metadata": {},
    "outputs": [
     {
@@ -215,7 +215,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "economic-kuwait",
+   "id": "gorgeous-somalia",
    "metadata": {},
    "outputs": [
     {
@@ -252,7 +252,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "continued-hearing",
+   "id": "egyptian-spending",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -262,7 +262,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "lesser-shock",
+   "id": "filled-municipality",
    "metadata": {},
    "outputs": [
     {
@@ -303,7 +303,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "conventional-annotation",
+   "id": "sporting-field",
    "metadata": {},
    "outputs": [],
    "source": []
