--- a/XGBoost.ipynb
+++ b/XGBoost.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "satisfactory-barrier",
+   "id": "competitive-diving",
    "metadata": {},
    "outputs": [
     {
@@ -26,8 +26,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "plain-algorithm",
+   "execution_count": 1,
+   "id": "positive-circular",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,8 +42,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "offshore-checkout",
+   "execution_count": 2,
+   "id": "overhead-grain",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,13 +62,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "supported-twelve",
+   "execution_count": 3,
+   "id": "fewer-commissioner",
    "metadata": {},
    "outputs": [],
    "source": [
     "clean_fundamen=pd.read_csv(\"dataset_1.csv\")\n",
-    "LabnF=pd.read_csv(\"./labnf.csv\")\n",
+    "LabnF=pd.read_csv(\"./labnf_6p.csv\")\n",
     "X,Y=clean_fundamen[numeric_columns],LabnF[\"Label\"]\n",
     "scaler = StandardScaler()\n",
     "scaler.fit(X)\n",
@@ -77,8 +77,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "underlying-venice",
+   "execution_count": 4,
+   "id": "indian-gospel",
    "metadata": {},
    "outputs": [
     {
@@ -99,7 +99,7 @@
        "        -0.28320268, -0.01776436]])"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -110,8 +110,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
-   "id": "upset-wednesday",
+   "execution_count": 5,
+   "id": "dynamic-dressing",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,15 +123,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
-   "id": "aboriginal-contract",
+   "execution_count": 15,
+   "id": "activated-shelf",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[23:43:27] WARNING: ../src/learner.cc:1061: Starting in XGBoost 1.3.0, the default evaluation metric used with the objective 'multi:softprob' was changed from 'merror' to 'mlogloss'. Explicitly set eval_metric if you'd like to restore the old behavior.\n"
+      "[12:30:58] WARNING: ../src/learner.cc:1061: Starting in XGBoost 1.3.0, the default evaluation metric used with the objective 'multi:softprob' was changed from 'merror' to 'mlogloss'. Explicitly set eval_metric if you'd like to restore the old behavior.\n"
      ]
     },
     {
@@ -140,7 +140,7 @@
        "XGBClassifier(base_score=0.5, booster='gbtree', colsample_bylevel=1,\n",
        "              colsample_bynode=1, colsample_bytree=1, gamma=0, gpu_id=-1,\n",
        "              importance_type='gain', interaction_constraints='',\n",
-       "              learning_rate=0.300000012, max_delta_step=0, max_depth=10,\n",
+       "              learning_rate=0.300000012, max_delta_step=0, max_depth=14,\n",
        "              min_child_weight=1, missing=nan, monotone_constraints='()',\n",
        "              n_estimators=100, n_jobs=12, num_parallel_tree=1,\n",
        "              objective='multi:softprob', random_state=0, reg_alpha=0,\n",
@@ -148,21 +148,21 @@
        "              tree_method='exact', validate_parameters=1, verbosity=None)"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# fit model no training data\n",
-    "model = XGBClassifier(max_depth=10)\n",
+    "model = XGBClassifier(max_depth=14)\n",
     "model.fit(X_train, y_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
-   "id": "parallel-singles",
+   "execution_count": 16,
+   "id": "partial-midnight",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,15 +172,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
-   "id": "injured-italian",
+   "execution_count": 17,
+   "id": "empirical-temperature",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 48.44%\n"
+      "Accuracy: 44.08%\n"
      ]
     }
    ],
@@ -192,15 +192,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
-   "id": "acting-theme",
+   "execution_count": 18,
+   "id": "lovely-harrison",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 89.34%\n"
+      "Accuracy: 99.71%\n"
      ]
     }
    ],
@@ -214,7 +214,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "miniature-evening",
+   "id": "modern-supply",
    "metadata": {},
    "outputs": [],
    "source": []
