--- a/Codes/NoteBooks/CustomRandomForest.ipynb
+++ b/Codes/NoteBooks/CustomRandomForest.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "permanent-psychology",
+   "id": "certified-services",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "polish-namibia",
+   "id": "interstate-documentation",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "accomplished-edward",
+   "id": "historic-revelation",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,12 +106,12 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "threatened-celebration",
+   "id": "gorgeous-swift",
    "metadata": {},
    "outputs": [],
    "source": [
-    "clean_fundamen=pd.read_csv(\"dataset_1.csv\")\n",
-    "LabnF=pd.read_csv(\"./labnf.csv\")\n",
+    "clean_fundamen=pd.read_csv(\"../../Datasets/dataset_1.csv\")\n",
+    "LabnF=pd.read_csv(\"../../Datasets/labnf.csv\")\n",
     "X,Y=clean_fundamen[numeric_columns],LabnF[\"Label\"]\n",
     "scaler = StandardScaler()\n",
     "scaler.fit(X)\n",
@@ -121,7 +121,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "opened-january",
+   "id": "median-triple",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,34 +133,34 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "residential-theater",
+   "id": "orange-joshua",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.5458803280778547\n",
-      "0.544792613998555\n",
-      "0.5456444689983426\n",
-      "0.543856402192852\n",
-      "0.5474327482894905\n",
-      "0.5498903574008754\n",
-      "0.5474106497811397\n",
-      "0.5443674301984616\n",
-      "0.5460828269091836\n",
-      "0.5471862649271174\n"
+      "0.6947120819344694\n",
+      "0.6929909481110025\n",
+      "0.6914449024690833\n",
+      "0.6920549487909566\n",
+      "0.7023609281373507\n",
+      "0.6900928562322043\n",
+      "0.7065366962730015\n",
+      "0.7118571246440866\n",
+      "0.7222236624027878\n",
+      "0.6736641026730695\n"
      ]
     }
    ],
    "source": [
-    "clf=RandomForest(X_train,y_train,X_test, y_test,sample_size=100,max_depth=12,criterion=\"entropy\")"
+    "clf=RandomForest(X_train,y_train,X_test, y_test,sample_size=100,max_depth=18,criterion=\"entropy\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "loving-tension",
+   "execution_count": 7,
+   "id": "aware-trader",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,15 +169,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "fixed-american",
+   "execution_count": 8,
+   "id": "challenging-sampling",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "This Classification Tree Prediction Accuracy:    0.48164201937786844\n"
+      "This Classification Tree Prediction Accuracy:    0.4844467108618052\n"
      ]
     }
    ],
@@ -188,7 +188,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "polar-microwave",
+   "id": "interstate-wales",
    "metadata": {},
    "outputs": [],
    "source": []
