--- a/Codes/NoteBooks/XGBoost.ipynb
+++ b/Codes/NoteBooks/XGBoost.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "competitive-diving",
+   "id": "major-prize",
    "metadata": {},
    "outputs": [
     {
@@ -27,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "positive-circular",
+   "id": "broken-blend",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "overhead-grain",
+   "id": "dressed-dakota",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,12 +63,12 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "fewer-commissioner",
+   "id": "encouraging-onion",
    "metadata": {},
    "outputs": [],
    "source": [
-    "clean_fundamen=pd.read_csv(\"dataset_1.csv\")\n",
-    "LabnF=pd.read_csv(\"./labnf_6p.csv\")\n",
+    "clean_fundamen=pd.read_csv(\"../../Datasets/dataset_1.csv\")\n",
+    "LabnF=pd.read_csv(\"../../Datasets/labnf.csv\")\n",
     "X,Y=clean_fundamen[numeric_columns],LabnF[\"Label\"]\n",
     "scaler = StandardScaler()\n",
     "scaler.fit(X)\n",
@@ -78,7 +78,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "indian-gospel",
+   "id": "appointed-recovery",
    "metadata": {},
    "outputs": [
     {
@@ -111,7 +111,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "dynamic-dressing",
+   "id": "sublime-australia",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,15 +123,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "activated-shelf",
+   "execution_count": 6,
+   "id": "federal-literature",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/kaypee/miniconda3/envs/ds/lib/python3.8/site-packages/xgboost/sklearn.py:888: UserWarning: The use of label encoder in XGBClassifier is deprecated and will be removed in a future release. To remove this warning, do the following: 1) Pass option use_label_encoder=False when constructing XGBClassifier object; and 2) Encode your labels (y) as integers starting with 0, i.e. 0, 1, 2, ..., [num_class - 1].\n",
+      "  warnings.warn(label_encoder_deprecation_msg, UserWarning)\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[12:30:58] WARNING: ../src/learner.cc:1061: Starting in XGBoost 1.3.0, the default evaluation metric used with the objective 'multi:softprob' was changed from 'merror' to 'mlogloss'. Explicitly set eval_metric if you'd like to restore the old behavior.\n"
+      "[11:59:14] WARNING: ../src/learner.cc:1061: Starting in XGBoost 1.3.0, the default evaluation metric used with the objective 'multi:softprob' was changed from 'merror' to 'mlogloss'. Explicitly set eval_metric if you'd like to restore the old behavior.\n"
      ]
     },
     {
@@ -148,7 +156,7 @@
        "              tree_method='exact', validate_parameters=1, verbosity=None)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -161,8 +169,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "partial-midnight",
+   "execution_count": 7,
+   "id": "spatial-ocean",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,7 +181,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "empirical-temperature",
+   "id": "blond-humanity",
    "metadata": {},
    "outputs": [
     {
@@ -193,7 +201,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "lovely-harrison",
+   "id": "cognitive-sheffield",
    "metadata": {},
    "outputs": [
     {
@@ -214,7 +222,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "modern-supply",
+   "id": "cardiac-browser",
    "metadata": {},
    "outputs": [],
    "source": []
